[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemy/Minotaur.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemy/minotaur/minotaur_sheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11.6706, 20.0583 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9.28732, 30.7831 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 43.0506, 10 )

[sub_resource type="Animation" id=4]
resource_name = "attack_1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 14, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/hitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack_2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 22, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/attack2_hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/attack2_hitbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 13 ]
}

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.368627, 0.933333, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.980392, 0.0823529, 0.0823529, 1 )

[sub_resource type="CircleShape2D" id=11]

[node name="Minotaur" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.98608, -3.17773 )
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 15
frame = 29

[node name="hitbox" type="Area2D" parent="Sprite"]
visible = false
monitoring = false
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/hitbox"]
position = Vector2( 27.0106, -9.53314 )
shape = SubResource( 7 )
disabled = true

[node name="attack2_hitbox" type="Area2D" parent="Sprite"]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/attack2_hitbox"]
position = Vector2( -5.95822, 3.97217 )
shape = SubResource( 8 )
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="Sprite"]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_1 = SubResource( 4 )
anims/attack_2 = SubResource( 5 )
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )

[node name="hp_bar" type="ProgressBar" parent="."]
margin_left = -20.0
margin_top = -35.0
margin_right = 20.0
margin_bottom = -29.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
value = 50.0
percent_visible = false

[node name="Tween" type="Tween" parent="hp_bar"]

[node name="detector" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource( 11 )
[connection signal="body_entered" from="Sprite/hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Sprite/attack2_hitbox" to="." method="_on_attack2_hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
